tests/examples/snapshots/fail/sorts/def_wrong_arg.fly.snap
---
source: tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/def_wrong_arg.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: expected s but found bool
   ┌─ tests/examples/fail/sorts/def_wrong_arg.fly:10:1
   │
10 │ assert forall x:bool, y:s. f(x, y)
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


